[project]
name = "forever-chasing"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavel", email = "60060559+pyrogn@users.noreply.github.com"},
]
dependencies = [
    "numpy>=1.25.2",
    "matplotlib>=3.8.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.10.0",
    "pyright>=1.1.332",
    "mypy>=1.6.1",
    "ruff>=0.1.1",
]
